@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>info.cukes</groupId>
     <artifactId>cucumber-jvm</artifactId>
-    <version>1.0.10-SNAPSHOT</version>
+    <version>1.0.12-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Cucumber-JVM</name>
     <url>http://cukes.info/</url>
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <outputDirectory>${project.build.directory}</outputDirectory>
         <gherkin.version>2.11.1</gherkin.version>
-        <groovy.version>2.0.0-rc-2</groovy.version>
+        <groovy.version>2.0.0</groovy.version>
     </properties>
     <licenses>
         <license>
@@ -39,6 +39,12 @@
     </distributionManagement>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>info.cukes</groupId>
+                <artifactId>cucumber-deps</artifactId>
+                <scope>provided</scope>
+                <version>1.0.0</version>
+            </dependency>
             <dependency>
                 <groupId>info.cukes</groupId>
                 <artifactId>cucumber-core</artifactId>
@@ -85,26 +91,6 @@
                 <version>${groovy.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.googlecode.java-diff-utils</groupId>
-                <artifactId>diffutils</artifactId>
-                <version>1.2.1</version>
-            </dependency>
-            <dependency>
-                <groupId>com.thoughtworks.xstream</groupId>
-                <artifactId>xstream</artifactId>
-                <version>1.4.2</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>xmlpull</groupId>
-                        <artifactId>xmlpull</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>xpp3</groupId>
-                        <artifactId>xpp3_min</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
                 <groupId>org.picocontainer</groupId>
                 <artifactId>picocontainer</artifactId>
                 <version>2.14.1</version>
@@ -122,23 +108,23 @@
             <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
-                <version>2.9.1</version>
+                <version>2.10.0-M4</version>
             </dependency>
             <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-compiler</artifactId>
-                <version>2.9.1</version>
+                <version>2.10.0-M4</version>
             </dependency>
             <dependency>
                 <groupId>org.clojure</groupId>
                 <artifactId>clojure</artifactId>
-                <!-- Remember to bounce version in examples/clojure_cukes as well -->
-                <version>1.4.0</version>
+                <!-- Remember to bounce version in examples/clojure_cukes/project.clj as well -->
+                <version>1.5.0-alpha2</version>
             </dependency>
             <dependency>
-                <groupId>rhino</groupId>
-                <artifactId>js</artifactId>
-                <version>1.7R2</version>
+                <groupId>org.mozilla</groupId>
+                <artifactId>rhino</artifactId>
+                <version>1.7R4</version>
             </dependency>
             <dependency>
                 <groupId>org.ioke</groupId>
@@ -172,19 +158,25 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>1.6.3</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-chrome-driver</artifactId>
-                <version>2.21.0</version>
+                <version>2.24.1</version>
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-server</artifactId>
-                <version>2.21.0</version>
+                <version>2.24.1</version>
             </dependency>
             <dependency>
                 <groupId>org.webbitserver</groupId>
                 <artifactId>webbit</artifactId>
-                <version>0.4.7</version>
+                <version>0.4.8</version>
             </dependency>
             <dependency>
                 <groupId>org.jruby</groupId>
@@ -216,6 +208,10 @@
     </dependencyManagement>
 
     <repositories>
+        <repository>
+            <id>cucumber-deps</id>
+            <url>file://${basedir}/../deps/repository</url>
+        </repository>
         <repository>
             <id>codehaus</id>
             <url>http://repository.codehaus.org</url>
@@ -283,6 +279,7 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
                         <version>2.2.2</version>
                         <configuration>
@@ -473,6 +470,9 @@
                 <version>2.12</version>
                 <configuration>
                     <argLine>-Duser.language=en</argLine>
+                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                    <useFile>false</useFile>
                 </configuration>
             </plugin>
 
